# blog

./: .Renviron  README.md  _publish.yml  _quarto.yml  about.qmd  index.qmd  posts.qmd  pyproject.toml  setup.sh  styles.css
.devcontainer/: devcontainer.json  dockerfile  dockerfile_blog  install_packages.sh  pypkgs.txt  rpkgs.txt
.github/workflows/: process-markdown.yml
.test-files/: Post with Image.md  post-with-ai-prompt.qmd  post-with-yaml.md  post-with-yaml.qmd
_site/: about-bk.html  about.html  index.html  listings.json  posts.html  search.json  styles.css
_site/archives/: about-bk.html
_site/posts/: index.html
_site/tempo/: about.html  index.html
archives/: about-bk.qmd
ingest-external-md/: Post with Image.md  README.md
posts/: _metadata.yml  index.qmd
posts/20180101_8-ball-function/: index.qmd
posts/20180101_magic8ballfunction/: index.qmd
posts/20201207_ialiquor/: index.qmd
posts/20201218_avocado/: index.qmd
posts/20211218_avocado/: index.qmd
posts/20211230_Data-Science-Chromebook/: index.qmd
posts/20221129_dummy-post/: index.qmd
posts/20230118_setting-up-new-mac/: index.qmd
posts/20230118_settingupmba/: index.qmd
posts/2024-11-15-post-pca/: index.qmd  wine.py
posts/20240618_mdtext/: index.qmd
posts/20240619_whichbike/: index.qmd
posts/20241121_ftptraining/: index.qmd
processed-staging/: Post with Image.md
scripts/: 00-process-markdown-import.py  01-sanitize-filenames.py  02-standardize-yaml.py  03-convert-highlights.py  04-fix-image-paths.py  05-validate-content.py
unused_assets/: README.md
(+41 files in other folders)
