[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.5",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "polars>=1.32.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "wheel>=0.45.1",
]
